# chipcraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: chip8.h  graphics.h  log.h  main.h
src/: chip8.c  chip8.h  graphics.c  log.c  main.c  main.h
tests/: test_stack_new.c  test_stack_pop.c  test_stack_push.c
